--- a/src/assets/theme/colors.module.scss
+++ b/src/assets/theme/colors.module.scss
@@ -73,6 +73,9 @@ $PINK_100: #f8bbd0;
 $PINK_50: #fce4ec;
 
 $CRAYOLA: #ba68c8;
+$GJ_PURPLE: #8a66eb;
+$GJ_BLACK: #141b2d;
+$GJ_BLACK_100: #1e2a3d;
 
 :export {
   TEAL: $TEAL;
@@ -150,4 +153,7 @@ $CRAYOLA: #ba68c8;
   PINK_50: $PINK_50;
 
   CRAYOLA: $CRAYOLA;
+  GJ_PURPLE: $GJ_PURPLE;
+  GJ_BLACK: $GJ_BLACK;
+  GJ_BLACK_100: $GJ_BLACK_100;
 }
